Fix GitHub Corner overlap iPhone 5

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ kbd {
   text-align: center;
 }
 
+.header {
+  margin-top: 4em;
+}
+
 .output {
   margin: 2em;
 }
